# gox_plate_pipeline

./: .pre-commit-config.yaml  AGENTS.md  CHAT_HANDOVER.md  README.md  WORKFLOW.md  pyproject.toml  test_plate_detection.py
.serena/: project.yml
docs/: fitting_logic_summary_and_infographic_prompt.md
meta/: README.md  bo_catalog_bma.csv  bo_catalog_bma_template.csv  bo_run_round_map.tsv  bo_run_round_map.yml  config.yml  config_GOx_Concentration_col2_60min.yml  polymer_colors.yml  run_group_map.tsv  same_date_run_include.tsv
notebooks/: dev_analysis.ipynb
research strategy/: METHODS_ONE_PAGE.md  README.md  RESEARCH_OVERVIEW_AND_REFERENCES.md
research_strategy/: METHODS_ONE_PAGE_TEMPLATE.md  README_TXT_INDEX.md  RESEARCH_DIRECTION.md  extract_docx_to_txt.py  extract_figures.py  rename_figures_by_caption.py  研究方針と言語化_共有用.md
scripts/: aggregate_polymer_heat.py  analysis_260216_gox_dmso_etoh.py  analyze_gox_tradeoff_decisions.py  analyze_problem_wells.py  build_bo_learning_data.py  build_fog_plate_aware.py  build_round_averaged_fog.py  build_uvvis_calibration_from_summary_excel.py  build_uvvis_calibration_workbook.py  diagnose_xy_edge_ei.py  dump_methods_defaults.py  extract_clean_csv.py  fit_initial_rates.py  generate_launch_json.py  generate_row_map_template.py  generate_run_group_tsv.py  generate_run_round_tsv.py  generate_same_date_include_tsv.py  generate_well_plots_only.py  plot_test.py  pre-commit-update-methods.sh  run_bayesian_optimization.py  run_bo_pipeline.py  run_extract_all.py  run_fit_all.py  run_fit_then_round_fog.py  run_group_mean_summary.py  (+6 more)
(+1071 files in other folders)
