[project]
name = "gox-plate-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]
ref = [
    "pymupdf>=1.24.0",
]

[project.scripts]
gox-plate-pipeline = "gox_plate_pipeline:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
